# rm2021_test

./: .gitignore  CMakeLists.txt  README.md  camparams_0.xml  camparams_1.xml  camparams_2.xml  config_hero.ini  config_infantry.ini  main.cpp  makefile  rm2021_adv
armor/: anti_top.hpp  armorDetector.hpp  armorHiter.hpp  armorTracker.hpp
config/: config_hero.ini  config_infantry.ini  config_sentinel.ini
dfc/: DfcDetector.hpp  DfcHiter.hpp  MillHiter.hpp  dfcDetector.hpp
gimbal/: config.txt  gimbal_control.cpp  gimbal_control.h  gimbal_test  gimbal_test.cpp  makefile
mill/: Mill.hpp  MillHiter(default).hpp  MillHiter.cpp  MillHiter.hpp  config.txt  gimbal_control.h  gimbal_test  makefile
mill/mill-test/: MillHiter.cpp  MillHiter.hpp  SinePredictor.cpp  SinePredictor.hpp  sys_time.cpp  sys_time.hpp  tool.cpp  tool.hpp
mill/millhiter/: MillHiter.cpp  MillHiter.hpp
misc/: KMSolver.hpp  camview.hpp  configurations.hpp  custom_definations.hpp  dnnManager.hpp  predictor.hpp  serial.hpp  trackerMedianFlow.hpp  util.hpp
model/: armor.cfg  armor.weights  fire.cfg  fire.weights  fire_lenet.cfg  mnist.cfg
rune/: Rune.hpp
rune/runehiter/: RuneHiter.cpp  RuneHiter.hpp  kalman.cpp  kalman.hpp
